# Log4Pot

./: .gitignore  README.md  default-url-allowlist  default-url-denylist  expression_parser.py  log4pot-loganalyzer.py  log4pot-server.py  log4pot.conf.example  log4pot.py  payloader.py  pyproject.toml  s3.py
log4pot/: deobfuscator.py  expression_parser.py  loganalyzer.py  payloader.py
responses/: default.json  sap-netweaver.html  tomcat-default.html  vmware-esx-4.html
sampleloader/: lookups.py
test/: test_deobfuscation.py  test_lookups.py  test_payloader.py
