[tool.poetry]
name = "log4pot"
version = "0.1.0"
description = "Honeypot for the Log4Shell vulnerability (CVE-2021-44228)"
authors = ["Thomas Patzke <thomas@patzke.org>"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.8"
azure-storage-blob = "^12.9.0"
pycurl = "^7.44.1"
boto3 = "^1.20.26"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
